ensure markup panes wrap text in a row content

--- a/panel/styles/models/tabulator.less
+++ b/panel/styles/models/tabulator.less
@@ -1,3 +1,7 @@
 .tabulator-table {
-  max-width: 100%
+  max-width: 100%;
+
+  .tabulator-row .row-content .bk-panel-models-markup-HTML {
+    white-space: normal;
+  }
 }
